# image23dprint

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  VERIFICATION_REPORT.md  e2e_test_script.py  pyproject.toml  test_graceful_degradation_simple.py  test_integration.py  verify_graceful_degradation.py
.auto-claude/specs/004-gui-architecture-refactor/: implementation_plan.json
.claude/: settings.json
.claude/skills/code-review/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  architecture.md  github_actions.md  governance.md
docs/decisions/: 0001-record-architecture-decisions.md
src/image23dprint/: exporter.py  gui.py  mesh.py  ollama_vision.py  processor.py  workers.py
src/image23dprint/ui/: __init__.py  main_window.py
src/image23dprint/widgets/: __init__.py  maskable_image_label.py
tests/: test_mesh.py  test_ollama_vision.py
